Fix bug that stretches images on iphone for the third time

--- a/src/pages/Work/Work.scss
+++ b/src/pages/Work/Work.scss
@@ -157,7 +157,7 @@
 
     &__each {
       width: 32%;
-      object-fit: cover;
+      object-fit: contain;
     }
   }
 
